[gd_scene load_steps=2 format=3 uid="uid://cqq6jdeb50g5x"]

[ext_resource type="Script" uid="uid://b5wt3eqwmio0c" path="res://ui/settings_menu.gd" id="1_h6jc8"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_h6jc8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SettingsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="MasterVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFXVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="SFXVolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="value_changed" from="VBoxContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
